istioctl/cmd/testdata/authz/converter/policy-clusterRbacConfig-off-want.yaml
# Generated from ClusterRbacConfig with mode OFF. This policy is in root namespace and will allow all requests in the mesh by default.
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: generated-global-allow-all
  namespace: my-root-namespace
spec:
  rules:
  - {}
---
# Generated for service "productpage.default.svc.cluster.local" found in ServiceRole "productpage" at rule 0
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: generated-productpage-rule0-svc0-target0
  namespace: default
spec:
  rules:
  - from:
    - source:
        principals:
        - user
  selector:
    matchLabels:
      app: productpage
      version: v1
---
