istioctl/cmd/testdata/authz/converter/policy-clusterRbacConfig-off.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ClusterRbacConfig
metadata:
  name: default
spec:
  mode: 'OFF'
---
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRole
metadata:
  name: productpage
  namespace: default
spec:
  rules:
  - services: ["productpage.default.svc.cluster.local"]
---
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRoleBinding
metadata:
  name: binding
  namespace: default
spec:
  subjects:
  - user: "user"
  roleRef:
    kind: ServiceRole
    name: "productpage"
